The admin box has a position of fixed, hence if in the natural rendering it is drawn off screen it will never be seen... By putting a top of 45% it is move to a position that kind of matches the attlasian defect reporting widget, and ensures that it should be seen.

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -986,6 +986,7 @@ h3.collection-mid-black::before {
 	margin: 0px;
 	padding: 2px 15px 2px 15px;
 	font-weight: 700;
+	top: 45%;
 }
 
 .resizable.resize-vertical {
